--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,9 @@
 ---
-import GlitchLogo from './GlitchLogo.astro';
+
 ---
 
 <section>
-    <GlitchLogo />
+    <div class="hero-container">
+        <h1>Hero Section</h1>
+    </div>
 </section>
