--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -3,7 +3,7 @@ import MobileMenu from "./MobileMenu.astro";
 ---
 <header class="fixed top-0 left-0 right-0 z-50 bg-transparent text-white pt-8 md:pt-12">
     <nav class="container mx-auto flex justify-between items-center px-6">
-        <div class="logo text-2xl md:text-3xl font-bold tracking-wider">DigitalFusion</div>
+        <div class="logo text-2xl md:text-3xl font-bold tracking-wider z-50">DigitalFusion</div>
         <div class="hidden md:block">
             <ul class="flex items-center">
                 <li class="mx-3"><a href="/" class="hover:text-blue-300 transition-colors duration-300 text-sm uppercase tracking-wider">Domů</a></li>
