--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,12 +20,16 @@ const { title } = Astro.props;
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
     </head>
-    <body class="flex flex-col min-h-screen">
-        <Particles id="tsparticles" options={particlesOptions} />
-        <Header />
-        <main class="flex-grow">
-            <slot />
-        </main>
-        <Footer />
+    <body class="flex flex-col min-h-screen bg-black text-white">
+        <div class="absolute inset-0 z-0">
+            <Particles id="tsparticles" options={particlesOptions} />
+        </div>
+        <div class="relative z-10 flex flex-col min-h-screen">
+            <Header />
+            <main class="flex-grow container mx-auto px-4 py-8">
+                <slot />
+            </main>
+            <Footer />
+        </div>
     </body>
 </html>
